
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_short ;
typedef int fd_set ;
typedef int buf ;


 int BS ;
 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int STDIN_FILENO ;
 int conn (char*,int ) ;
 int die (char*) ;
 int printf (char*) ;
 int read (int,char*,int) ;
 int select (int,int *,int *,int *,int *) ;
 int write (int,char*,int) ;

void shell(char *host, u_short port)
{
    int sock = 0, l = 0;
    char buf[BS];
    fd_set rfds;

    sock = conn(host, port);

    printf("got a shell\n\n");
    FD_ZERO(&rfds);

    while (1) {
 FD_SET(STDIN_FILENO, &rfds);
 FD_SET(sock, &rfds);

 if (select(sock + 1, &rfds, ((void*)0), ((void*)0), ((void*)0)) < 1)
     die("select");

 if (FD_ISSET(STDIN_FILENO, &rfds)) {
     if ((l = read(0, buf, BS)) <= 0)
  die("\n - Connection closed by user\n");
     if (write(sock, buf, l) < 1)
  die("write");
 }

 if (FD_ISSET(sock, &rfds)) {
     l = read(sock, buf, sizeof(buf));

     if (l == 0)
  die("\n - Connection terminated.\n");
     else if (l < 0)
  die("\n - Read failure\n");

     if (write(1, buf, l) < 1)
  die("write");
 }
    }
}
